# workbench

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agent/: model_introspect.py  skill_loader.py  tools.py
backend/agent/skills/: data_explainer.md  data_quality.md  kpi_explainer.md  macro_economist.md  model_explainer.md  orchestrator.md  overview_insights.md  plot_tuner.md  run_troubleshooter.md  tile_explainer.md  tile_tuner.md  transform_explainer.md  troubleshooter.md  workflow_validator.md
backend/cof/: base_agent.py  llm_config.py  mcp_registry.py  orchestrator.py
backend/config/: data_services.example.env
backend/models/: schemas.py
backend/packs/: __init__.py
backend/packs/deposits/: pack.py  tools.py
backend/packs/deposits/skills/: accuracy_reviewer.md  commentary_drafter.md  deposit_expert.md  methodology_researcher.md  model_challenger.md  variance_analyst.md
backend/packs/internal_tools/: pack.py
backend/packs/internal_tools/skills/: release_engineer.md
backend/packs/portfolio/: pack.py  tools.py
backend/packs/portfolio/skills/: allocation_strategist.md  mbs_decomposition_specialist.md  new_volume_analyst.md  pool_analytics_specialist.md  portfolio_gap_analyst.md  portfolio_risk_officer.md  trade_advisor.md  universe_screener.md
backend/routers/: analytics_defs.py  auth.py  chat.py  chat_validation.py  data_services.py  datasets.py  datasources.py  documents.py  functions.py  mcp_servers.py  models_registry.py  overview_layouts.py  playbooks.py  plots.py  scenarios.py  skills.py  tools.py  transforms.py  workspace.py
backend/services/: data_services.py  model_runner.py  workspace_data.py
docs/: ORCHESTRATOR.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
sample_data/ccar/: CCAR_Retail_Outputs.csv  ccar_peak_summary.csv  ccar_scenarios.csv  generate.py  generate_retail_inputs.py
sample_data/deposits/: data_harness.csv  deposit_results.csv  generate.py
sample_data/portfolio/: README.md  embs_deal_info.csv  generate.py  ip_results.csv  macro_forecast.csv  macro_history.csv  mbs_positions.csv  verify.py
sample_models/deposits/: _classes.py  (+5 more)
(+50 files in other folders)
